[project]
name = "millrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor Ferster", email = "connorferster@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "papermill>=2.6.0",
]

[project.scripts]
millrun = "millrun:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
